force-app/main/default/objects/Case_Detail__c/fields/RMKT_Take_Out_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>RMKT_Take_Out_Time_Frame__c</fullName>
    <description>Expected asset take-out time frame, in days.</description>
    <label>Take Out Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>&gt;90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>