force-app/main/default/objects/Case_Detail__c/fields/SA_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>SA_Asset_Type__c</fullName>
    <description>Asset types relevant to this Solution Architects request. Shown if Business Unit = ALM.</description>
    <label>Asset Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple Products</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>HDD</fullName>
            </value>
            <value>
                <fullName>Notebook Requirements</fullName>
            </value>
            <value>
                <fullName>SDD</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>