force-app/main/default/objects/Case_Detail__c/fields/SA_Custom_Solution_Required__c.field-meta.xml
<CustomField>
    <fullName>SA_Custom_Solution_Required__c</fullName>
    <description>Whether a custom solution is required for this request. Shown if Business Unit = ALM.</description>
    <defaultValue>false</defaultValue>
    <label>Custom Solution Required</label>
    <type>Checkbox</type>
</CustomField>