force-app/main/default/objects/Case_Detail__c/fields/SA_Customers_Business_Objectives__c.field-meta.xml
<CustomField>
    <fullName>SA_Customers_Business_Objectives__c</fullName>
    <description>The customer&apos;s business objectives for this engagement.</description>
    <label>Customer&apos;s Business Objectives</label>
    <type>TextArea</type>
</CustomField>