force-app/main/default/objects/Case_Detail__c/fields/SA_Demo_Provided__c.field-meta.xml
<CustomField>
    <fullName>SA_Demo_Provided__c</fullName>
    <description>Whether a demo was provided. Shown if Business Unit = DBU.</description>
    <label>Demo Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>