force-app/main/default/objects/Case_Detail__c/fields/SA_Demo_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>SA_Demo_Support_Type__c</fullName>
    <description>Type of demo support requested. Same condition as Preferred Cloud Provider.</description>
    <label>Demo Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard demo support</fullName>
            </value>
            <value>
                <fullName>Custom demo support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>