force-app/main/default/objects/Case_Detail__c/fields/SA_Document_Types__c.field-meta.xml
<CustomField>
    <fullName>SA_Document_Types__c</fullName>
    <description>Document types in scope. Same condition as Preferred Cloud Provider.</description>
    <label>Document Types</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>