force-app/main/default/objects/Case_Detail__c/fields/SA_DXP_Areas_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>SA_DXP_Areas_Of_Interest__c</fullName>
    <description>DXP&apos;s areas of interest for this client. Same condition as Preferred Cloud Provider.</description>
    <label>DXP Areas Of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Types (MS Word, Tiff, Excel, PPT)</fullName>
            </value>
            <value>
                <fullName>SPOG</fullName>
            </value>
            <value>
                <fullName>Agentic/Semantic Search</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Intelligent Process Automation (IPA)</fullName>
            </value>
            <value>
                <fullName>EDH</fullName>
            </value>
            <value>
                <fullName>Integrations with 3rd party systems</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>