force-app/main/default/objects/Case_Detail__c/fields/SA_Facility_Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_Facility_Capacity_Status__c</fullName>
    <description>Facility capacity status (placeholder value pending client/BA input). Required (Case Owner); same condition as Current Storage Environment.</description>
    <label>Facility Capacity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>