force-app/main/default/objects/Case_Detail__c/fields/SA_Implementation_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>SA_Implementation_Support_Needed__c</fullName>
    <description>Whether Implementation team support is needed. Shown when Case Type = Solution Architects AND W&amp;L BU = TRUE.</description>
    <label>Implementation Support Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>