force-app/main/default/objects/Case_Detail__c/fields/SA_Integration_Requirements__c.field-meta.xml
<CustomField>
    <fullName>SA_Integration_Requirements__c</fullName>
    <description>Existing software this solution needs to connect to. Required if Business Unit = DBU.</description>
    <inlineHelpText>e.g., ERP, CRM, custom APIs, legacy systems.</inlineHelpText>
    <label>Integration Requirements</label>
    <type>TextArea</type>
</CustomField>