force-app/main/default/objects/Case_Detail__c/fields/SA_IRMs_Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>SA_IRMs_Unique_Value__c</fullName>
    <description>IRM&apos;s unique value proposition for this engagement.</description>
    <label>IRM&apos;s Unique Value</label>
    <type>TextArea</type>
</CustomField>