force-app/main/default/objects/Case_Detail__c/fields/SA_IT_Involvement_Level__c.field-meta.xml
<CustomField>
    <fullName>SA_IT_Involvement_Level__c</fullName>
    <description>Involvement level of the customer&apos;s IT team. Required if Business Unit = DBU.</description>
    <label>IT Involvement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>