force-app/main/default/objects/Case_Detail__c/fields/SA_Media_Format__c.field-meta.xml
<CustomField>
    <fullName>SA_Media_Format__c</fullName>
    <description>Media format in scope. Required if Business Unit = RIM(MAS).</description>
    <label>Media Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTO</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DLT</fullName>
            </value>
            <value>
                <fullName>Microfilm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>