force-app/main/default/objects/Case_Detail__c/fields/SA_Multi_Site_Implementation__c.field-meta.xml
<CustomField>
    <fullName>SA_Multi_Site_Implementation__c</fullName>
    <description>Whether this is a multi-site implementation. Shown if Business Unit = RIM &amp; DBU.</description>
    <label>Multi Site Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>