force-app/main/default/objects/Case_Detail__c/fields/SA_Paper_Type__c.field-meta.xml
<CustomField>
    <fullName>SA_Paper_Type__c</fullName>
    <description>Paper types in scope. Required if Business Unit = RIM(Shred).</description>
    <label>Paper Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Pill bottles</fullName>
            </value>
            <value>
                <fullName>Blue wrap</fullName>
            </value>
            <value>
                <fullName>Shrink wrap</fullName>
            </value>
            <value>
                <fullName>Soft wrap</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>