force-app/main/default/objects/Case_Detail__c/fields/SA_Preferred_Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>SA_Preferred_Cloud_Provider__c</fullName>
    <description>Client&apos;s preferred cloud provider. Required if Business Unit = DBU and DXP Demo Needed = Yes.</description>
    <label>Preferred Cloud Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon AWS</fullName>
            </value>
            <value>
                <fullName>Google GCP</fullName>
            </value>
            <value>
                <fullName>MS Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>