force-app/main/default/objects/Case_Detail__c/fields/SA_Requester_Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>SA_Requester_Info_Complete__c</fullName>
    <description>Field to check if all required Solution Architects Case-Requester fields are populated.</description>
    <formula>AND(
			NOT(ISBLANK(TEXT(SA_Target_Start_Date__c))),
			NOT(ISBLANK(SA_Customers_Business_Objectives__c)),
			NOT(ISBLANK(SA_Expected_Outcome__c)),
			NOT(ISBLANK(SA_IRMs_Unique_Value__c)),
			NOT(ISBLANK(SA_RFx__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required Solution Architects Case-Requester fields are populated.</inlineHelpText>
    <label>Requester Info Complete</label>
    <type>Checkbox</type>
</CustomField>