force-app/main/default/objects/Case_Detail__c/fields/SA_RFP_Authorship__c.field-meta.xml
<CustomField>
    <fullName>SA_RFP_Authorship__c</fullName>
    <description>Whether IRM helped author the RFP.</description>
    <inlineHelpText>Did we help write the RFP?</inlineHelpText>
    <label>Authorship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>