force-app/main/default/objects/Case_Detail__c/fields/SA_RFP_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>SA_RFP_Customer_Contact__c</fullName>
    <description>Customer contact for the RFP. Shown if Business Unit = DBU.</description>
    <label>Customer Contact</label>
    <type>TextArea</type>
</CustomField>