force-app/main/default/objects/Case_Detail__c/fields/SA_RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SA_RFP_Due_Date__c</fullName>
    <description>RFP due date. Shown if Business Unit = DBU.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>