force-app/main/default/objects/Case_Detail__c/fields/SA_RFP_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>SA_RFP_Incumbent__c</fullName>
    <description>Whether there is an incumbent vendor.</description>
    <inlineHelpText>Is there an incumbent vendor?</inlineHelpText>
    <label>Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>