force-app/main/default/objects/Case_Detail__c/fields/SA_RFP_Technical_Fit__c.field-meta.xml
<CustomField>
    <fullName>SA_RFP_Technical_Fit__c</fullName>
    <description>Assessment of technical fit for the RFP.</description>
    <inlineHelpText>How much customization is required?</inlineHelpText>
    <label>Technical Fit</label>
    <type>TextArea</type>
</CustomField>