force-app/main/default/objects/Case_Detail__c/fields/SA_RFx__c.field-meta.xml
<CustomField>
    <fullName>SA_RFx__c</fullName>
    <description>Details on the RFx.</description>
    <inlineHelpText>Is this an RFP?</inlineHelpText>
    <label>RFx (RFI/RFQ/RFP)</label>
    <type>TextArea</type>
</CustomField>