force-app/main/default/objects/Case_Detail__c/fields/SA_Site_Details__c.field-meta.xml
<CustomField>
    <fullName>SA_Site_Details__c</fullName>
    <description>Site access details. Required if Business Unit = RIM(Shred) &amp; DBU.</description>
    <inlineHelpText>Loading dock/elevator access.</inlineHelpText>
    <label>Site Details</label>
    <type>LongTextArea</type>
    <length>15000</length>
</CustomField>