force-app/main/default/objects/Case_Detail__c/fields/SA_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>SA_Storage_Type__c</fullName>
    <description>Storage type. Required (Case Owner); same condition as Current Storage Environment.</description>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Open Shelf</fullName>
            </value>
            <value>
                <fullName>Pallet rack</fullName>
            </value>
            <value>
                <fullName>Floor Space</fullName>
            </value>
            <value>
                <fullName>Climate Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>