force-app/main/default/objects/Case_Detail__c/fields/SA_Technical_Maturity__c.field-meta.xml
<CustomField>
    <fullName>SA_Technical_Maturity__c</fullName>
    <description>Customer&apos;s technical maturity. Required if Business Unit = DBU.</description>
    <label>Technical Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>