force-app/main/default/objects/Case_Detail__c/fields/SA_Vault_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SA_Vault_Requirement__c</fullName>
    <description>Vault requirement. Required if Business Unit = RIM(MAS).</description>
    <label>Vault Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Vault</fullName>
            </value>
            <value>
                <fullName>Climate-Controlled</fullName>
            </value>
            <value>
                <fullName>Fire-Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>