force-app/main/default/objects/Case_Detail__c/fields/Sales_Billing_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Billing_Estimate__c</fullName>
    <description>Opportunity&apos;s Total Sales Billing Estimate at Case creation</description>
    <inlineHelpText>Opportunity&apos;s Total Sales Billing Estimate at Case creation</inlineHelpText>
    <label>Sales Billing Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>